--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,6 +2,10 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+html {
+    font-size: 16px;
+}
+
 h1 {
     color: blue;
 }
