fixing a few styling issues on home page

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -27,5 +27,7 @@ html {
         background: url('./search.png') no-repeat;
         background-position-y: center;
         background-position-x: 20px;
+        font-family: 'Marcellus', serif;
+        font-size: 1.1rem;
     }
 }
