trying to add page preview and favicon

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -31,4 +31,8 @@ html {
         font-family: 'Marcellus', serif;
         font-size: 1.1rem;
     }
+    .search-result-matched-word {
+        background-color: #FEF3C7
+;
+    }
 }
