--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,12 +2,9 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "~@fontsource/cinzel-decorative/index.css"; // Weight 400.
-@import "~@fontsource/cinzel/index.css"; // Weight 400.
-@import "~@fontsource/marcellus/index.css";
-
 html {
     font-size: 16px;
+    font-display: block; /* No longer causing FOUT */
     display: flex;
     width: 100%;
     body,
